Fixing desktop grid and temporary resolution to overflow

--- a/src/sections/SuccessIndicators/styles.css
+++ b/src/sections/SuccessIndicators/styles.css
@@ -6,6 +6,7 @@
     color: var(--darkBlue);
     font-size: 9px;
     font-weight: var(--subtitleWeight);
+    overflow-y: scroll;
 }
 .page-success-indicators p{
     font-size: 1.2vh
